--- a/IotaWebApp.web/Views/Home/Index.cshtml
+++ b/IotaWebApp.web/Views/Home/Index.cshtml
@@ -1,5 +1,30 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@* Views/Home/Index.cshtml *@
 @{
+    ViewData["Title"] = "Home";
 }
+
+<div class="top-panel">
+    <h1>Welcome to Iota Web App</h1>
+    <div class="carousel">
+        <!-- Placeholder for Slick Slider -->
+        <div>Slide 1</div>
+        <div>Slide 2</div>
+        <div>Slide 3</div>
+    </div>
+</div>
+
+<!-- Add a reference to the CSS and JS files -->
+<link href="~/css/styles.css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="~/lib/slick/slick.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('.carousel').slick({
+            dots: true,
+            infinite: true,
+            speed: 500,
+            slidesToShow: 1,
+            slidesToScroll: 1
+        });
+    });
+</script>
