--- a/IotaWebApp.web/Views/Shared/_Layout.cshtml
+++ b/IotaWebApp.web/Views/Shared/_Layout.cshtml
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="~/lib/foundation/css/foundation.min.css" />
     <link rel="stylesheet" href="~/lib/foundation/css/foundation-float.min.css" />
 
-    <!-- Include Slick CSS -->
-    <link rel="stylesheet" href="~/lib/slick-carousel/slick/slick.css" />
-    <link rel="stylesheet" href="~/lib/slick-carousel/slick/slick-theme.css" />
+    <link rel="stylesheet" href="~/lib/slick-carousel/slick.css" />
+    <link rel="stylesheet" href="~/lib/slick-carousel/slick-theme.css" />
+    <script src="~/lib/slick-carousel/slick.min.js"></script>
 
     <!-- Site CSS -->
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
@@ -45,13 +45,13 @@
     </footer>
 
     <!-- Include jQuery -->
-    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
 
     <!-- Include Foundation JS -->
     <script src="~/lib/foundation/js/foundation.min.js"></script>
 
     <!-- Include Slick JS -->
-    <script src="~/lib/slick-carousel/slick/slick.min.js"></script>
+    <script src="~/lib/slick-carousel/slick.min.js"></script>
 
     <!-- Initialize Foundation and Slick JS -->
     <script>
