--- a/IotaWebApp.web/Views/Admin/Index.cshtml
+++ b/IotaWebApp.web/Views/Admin/Index.cshtml
@@ -20,9 +20,9 @@
                 <td>@item.ContentValue</td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning">Edit</a>
-                    <!-- Add a Delete button with a confirmation dialog -->
-                    <form asp-action="Delete" asp-route-id="@item.Id" method="post" class="d-inline" onsubmit="return confirm('Are you sure you want to delete this item?');">
-                        <button type="submit" class="btn btn-danger">Delete</button>
+                    <form asp-action="DeleteConfirmed" asp-route-id="@item.Id" method="post" class="d-inline">
+                        @Html.AntiForgeryToken() 
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this item?');">Delete</button>
                     </form>
                 </td>
             </tr>
