--- a/IotaWebApp.web/wwwroot/css/site.css
+++ b/IotaWebApp.web/wwwroot/css/site.css
@@ -58,26 +58,26 @@ body, html {
     position: relative;
     left: 50%;
     right: 50%;
-    margin-left: -50vw; /* Pulls the image back to the left */
-    margin-right: -50vw; /* Pulls the image back to the right */
-    max-width: 100vw; /* Ensures it doesn't go beyond the viewport */
-    width: 100vw; /* Sets the width to full viewport width */
-    overflow: hidden; /* Prevent overflow */
-    box-sizing: border-box; /* Ensure padding and borders are included in width */
+    margin-left: -50vw;
+    margin-right: -50vw;
+    max-width: 100vw; 
+    width: 100vw; 
+    overflow: hidden; 
+    box-sizing: border-box;
 }
 
 .carousel {
-    width: 100%; /* Full width of the viewport */
-    margin: 0; /* Remove any default margins */
-    padding: 0; /* Remove any default padding */
-    position: relative; /* Relative to position absolute elements */
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    position: relative;
 }
 
 .hero-image {
-    width: 100%; /* Full width of the carousel */
-    display: block; /* Ensure the image is displayed as a block */
-    margin: 0; /* Remove any default margins */
-    max-width: 100%; /* Prevent overflow beyond viewport width */
+    width: 100%; 
+    display: block; 
+    margin: 0; 
+    max-width: 100%; 
     border-top-left-radius: 0; /* Straight top edges */
     border-top-right-radius: 0;
     border-bottom-left-radius: 0; /* Straight bottom edges */
@@ -104,20 +104,20 @@ body, html {
 /* New Div for Button */
 .carousel-button {
     position: absolute;
-    bottom: 0; /* Position relative to the bottom */
-    right: 0; /* Align to the right edge */
-    transform: translate(0, 50%); /* Move down by 50% of its height */
+    bottom: 0; 
+    right: 0; 
+    transform: translate(0, 50%);
 }
 
     .carousel-button .button {
         background-color: #18BEAB; /* Teal background */
-        color: #fff; /* White text */
-        padding: 1em 2em; /* Use em for padding */
+        color: #fff; 
+        padding: 1em 2em; 
         border-radius: 20px 0 20px 20px; /* Square box with rounded edges */
-        border: none; /* Remove any border */
+        border: none; 
         text-transform: uppercase;
         font-weight: bold;
-        box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.2); /* Use em for shadow */
+        box-shadow: 0 0.4em 1em rgba(0, 0, 0, 0.2);
     }
 
 /* Responsive Adjustments */
@@ -127,7 +127,7 @@ body, html {
     }
 
     .carousel-button {
-        right: 0; /* Still aligned to the right edge */
+        right: 0; 
     }
 
         .carousel-button .button {
